--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,8 @@ $RECYCLE.BIN/
 # =========================
 # Operating System Files
 # =========================
-
+*.vscode
+*.pyc
 # OSX
 # =========================
 
